# xls_updater

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run.py  xls_updater.spec
.github/actions/prepare-enviroment/: action.yaml
.github/actions/prepare-environment/: action.yaml
.github/workflows/: black.yml  coverage.yml  isort.yml  mypy.yml  publish.yml  pull-request-validation.yaml  pylint.yml  pytest.yml  validation.yaml
requirements/: requirements-dev.txt  requirements-test.txt  requirements.txt
samples/: README.md  get_samples.py  samples.json
tests/: test_app.py  test_big.py  test_cli.py  test_integration.py  test_samples.py  test_utils.py
xls_updater/: __about__.py  __main__.py  __version__.py  app.py  cli.py  main.py  test.py  utils.py
