[project]
name = "xls-updater"
version = "0.1.0"
description = "Convert legacy xls data to newer xlsx format."
authors = [
    {name = "Roy Moore", email="roy@moore.co.il"}
]

requires-python = ">=3.11"

dependencies = [
    "click",
    "openpyxl",
    "xlrd",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pylint",
    "pre-commit",
]

[project.urls]
homepage = "https://github.com/Tranquility2/xls_updater"
documentation = "https://github.com/Tranquility2/xls_updater"
repository = "https://github.com/Tranquility2/xls_updater"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
multi_line_output = 3
line_length = 120
include_trailing_comma = true

[tool.black]
line-length = 120
target_version = ["py311"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
