[project]
name = "xls-updater"
version = "0.1.0"
description = "Convert legacy xls data to newer xlsx format."
requires-python = ">=3.11"
authors = [
    {name = "Roy Moore", email="roy@moore.co.il"}
]

dependencies = [
    "click==8.1.7",
    "openpyxl==3.1.2",
    "xlrd==2.0.1",
]

[project.optional-dependencies]
dev = [
    "black==23.10.1",
    "isort==5.12.0",
    "pylint==3.0.2",
    "pre-commit==3.5.0",
]

[project.urls]
homepage = "https://github.com/Tranquility2/xls_updater"
documentation = "https://github.com/Tranquility2/xls_updater"
repository = "https://github.com/Tranquility2/xls_updater"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pip-tools]
quiet = true
rebuild = true
strip-extras = true
no-header = true
annotation-style = "line"

[tool.setuptools.packages.find]
include = ["xls_updater*"]
exclude = ["samples*", "tests*"]

[tool.isort]
multi_line_output = 3
line_length = 120
include_trailing_comma = true

[tool.black]
line-length = 120
target_version = ["py311"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pylint.main]
fail-under = 10.0

[tool.pylint.format]
max-line-length = 120
