[project]
name = "xls-updater"
description = "Convert legacy xls data to newer xlsx format."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
keywords = [
    "converter",
    "xls",
    "xlsx",
    "excel",
    "spreadsheet",
    "fileformat",
]
authors = [
    {name = "Roy Moore", email="roy@moore.co.il"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: File Formats",
]
dependencies = [
    "click==8.1.7",
    "openpyxl==3.1.2",
    "xlrd==2.0.1",
    "tqdm==4.66.2"
]
[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pylint",
    "pre-commit",
    "mypy",
]
test = [
    "xlwt==1.*",
    "pyarrow==15.*",
    "humanize",
    "pandas==2.*",
    "pytest",
    "pytest-cov",
    "pytest_mock",
]
release = [
    "semvergit",
    "build",
    "twine",
]

[project.scripts]
xls-updater = "xls_updater.cli:cli"

[project.urls]
homepage = "https://github.com/Tranquility2/xls_updater"
repository = "https://github.com/Tranquility2/xls_updater"

[build-system]
requires = [
    "hatchling",
    "versioningit",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.vcs]
default-tag = "0.0.0"
match = ["v*", ]
method = "git"

[tool.versioningit.tag2version]
rmprefix = "v"

[tool.pip-tools]
quiet = true
rebuild = true
strip-extras = true
no-header = true
annotation-style = "line"

[tool.setuptools.packages.find]
include = ["xls_updater*"]
exclude = ["tests*"]

[tool.isort]
multi_line_output = 3
line_length = 120
include_trailing_comma = true

[tool.black]
line-length = 120
target_version = ["py311"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pylint.main]
fail-under = 10.0

[tool.pylint.format]
max-line-length = 120

[tool.coverage.run]
omit = [
    "xls_updater/tests/*",
    "xls_updater/__main__.py",
]

[tool.coverage.report]
fail_under = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
implicit_reexport = false
warn_unused_ignores = true
warn_redundant_casts = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
